<resources>
    <string name="app_name">UWI</string>
    <string name="admin">Admin</string>
    <string name="dosen">Dosen</string>
    <string name="bantuan">Bantuan</string>
    <string name="dibuat_oleh_arif_rachmat_darmawan">Dibuat oleh Arif Rachmat Darmawan</string>
    <string name="halo">Halo!,</string>
    <string name="selamat_datang_admin">Selamat datang, Admin!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="selamat_datang">Selamat datang!</string>
    <string name="tambah">Tambah</string>
    <string name="tambah_dosen">Tambah Dosen</string>
    <string name="btn_update_dosen">Update Dosen</string>
    <string name="title_activity_tambah_dosen">MainActivity</string>


    <!-- String Data Spinner Mahasiswa -->

    <array name="prodi">
        <item>ILMU KOMUNIKASI</item>
        <item>HUBUNGAN INTERNATIONAL</item>
        <item>ILMU POLITIK</item>
        <item>ADMINISTRASI BISNIS</item>
        <item>MATEMATIKA</item>
        <item>DESAIN INTERIOR</item>
        <item>TEKNIK INFORMATIKA</item>
        <item>DESAIN KOMUNIKASI VISUAL</item>
        <item>BIOLOGI</item>
        <item>KIMIA</item>
        <item>FISIKA</item>
    </array>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_tambah_mahasiswa">MainActivity</string>
    <string name="username">Username</string>
    <string name="daftar">Daftar</string>
    <string name="daftar_dosen">Daftar Dosen</string>
</resources>