<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_300sdp"
        android:background="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        android:alpha="0.3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="2"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        android:rowCount="2"
        android:layout_marginBottom="@dimen/_100sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/ib_admin"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/ic_admin" />

        <TextView
            android:id="@+id/tv_admin"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/admin"
            android:textColor="@color/hitam"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/ib_dosen"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginLeft="@dimen/_40sdp"
            android:background="@drawable/ic_user" />

        <TextView
            android:id="@+id/tv_dosen"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/dosen"
            android:textColor="@color/hitam"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />
    </GridLayout>

    <ImageButton
        android:id="@+id/ib_bantuan"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/ic_guide"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <TextView
        android:id="@+id/tv_bantuan"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:text="@string/bantuan"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/hitam"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_bantuan" />

        <TextView
            android:id="@+id/tv_dibuat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_60sdp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>